--- a/TelosysTools/templates/java-rest-springboot-jpa-basic/main-java/XxxService_java.vm
+++ b/TelosysTools/templates/java-rest-springboot-jpa-basic/main-java/XxxService_java.vm
@@ -278,28 +278,30 @@ public class ${serviceClass} extends GenericService<${jpaEntityClass}, ${dtoClas
         return repository.existsById(entityId);
     }
 
-    // -----------------------------------------------------------------------------------------
-    // Specific "finders" for foreign key relationships
-    // -----------------------------------------------------------------------------------------
+#* -----------------------------------------------------------------------------------------
+   Specific "finders" for foreign key relationships
+   -----------------------------------------------------------------------------------------
 #foreach( $link in $entity.links )
-#if ( $link.isCardinalityManyToOne() )
-#foreach( $linkAttribute in $link.attributes )
-#set( $fkAttribute = $linkAttribute.originAttribute )
-    
-    /**
-     * Finds entities by ${link.targetEntity.name} reference
-     *
-     * @param ${fkAttribute.name} the ${link.targetEntity.name} ID
-     * @return list of DTOs
-     */
-    public List<${dtoClass}> findBy${fn.capitalize($link.targetEntity.name)}(${fkAttribute.type} ${fkAttribute.name}) {
-        logger.debug("findBy${fn.capitalize($link.targetEntity.name)}({})", ${fkAttribute.name});
-        List<${jpaEntityClass}> list = repository.findBy${fn.capitalize($fkAttribute.name)}(${fkAttribute.name});
-        return entityListToDtoList(list);
-    }
+  #if( $link.isCardinalityManyToOne() )
+    #foreach( $linkAttribute in $link.attributes )
+      #set( $fkAttribute = $linkAttribute.originAttribute )
+
+      /**
+       * Finds entities by ${link.targetEntity.name} reference
+       *
+       * @param ${fkAttribute.name} the ${link.targetEntity.name} ID
+       * @return list of DTOs
+       */
+      public List<${dtoClass}> findBy${fn.capitalize($link.targetEntity.name)}(${fkAttribute.type} ${fkAttribute.name}) {
+          logger.debug("findBy${fn.capitalize($link.targetEntity.name)}({})", ${fkAttribute.name});
+          List<${jpaEntityClass}> list = repository.findBy${fn.capitalize($fkAttribute.name)}(${fkAttribute.name});
+          return entityListToDtoList(list);
+      }
+    #end
+  #end
 #end
-#end
-#end
+*#
+
 
     // -----------------------------------------------------------------------------------------
     // DEPRECATED METHODS - Use the improved methods above instead
